syntax = "proto3";

package notification;

option go_package = "github.com/ezex-io/ezex-notification/api/grpc/proto";

service NotificationService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}

message SendEmailRequest{
  string recipient = 1;
  string subject = 2;
  string templateName = 3;
  // templateFields is a map of fields that generates body of an email inside a template
  map<string, string> templateFields = 4;
}

message SendEmailResponse{
}